--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate-types": "npx supabase gen types typescript --project-id gxzwdcgjtorzehmxxqar --schema public > types_db.ts"
   },
   "dependencies": {
     "next": "14.2.24",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "@tanstack/react-query": "^5.67.1"
   },
   "devDependencies": {
+    "@supabase/ssr": "^0.5.2",
     "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20",
     "@types/react": "^18",
