--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "generate-types": "npx supabase gen types typescript --project-id gxzwdcgjtorzehmxxqar --schema public > types_db.ts"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.1",
+    "@tanstack/react-query": "^5.67.1",
     "next": "14.2.24",
     "react": "^18",
-    "react-dom": "^18",
-    "@tanstack/react-query": "^5.67.1"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@supabase/ssr": "^0.5.2",
